Add media query

--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,10 @@ tbody tr:nth-child(odd) {
 table {
   min-width: 50em;
 }
+
+@media only screen and (min-width: 60em) {
+
+  .table-wrapper {
+    overflow: visible;
+  }
+}
